added class 2 201 notes

--- a/code-201/02.md
+++ b/code-201/02.md
@@ -1,1 +1,94 @@
-# Code 201, Class 2
+# HTML, CSS, and JS Basics
+
+The basics of HTML, CSS, and JavaScript are important to know because they are the building blocks of web developement. You can't delve deeper into web deelopment without haing a sufficient knowledge of the basics.
+
+## HTML
+
+### Semantic Elements
+
+Semantic elements are elements with a percribed meaning behind them. Examples of semantic elements are `h1` and `ol`. While one can make any element resemble a semantic element, it is important to utilize semantic elements.
+
+Three of these reasons are:
+
++ **SEO**, search engines read semantic elements in order to find keywords and make them show up in related searches. 
+
++ **CSS**, it's easier to apply CSS to semantic elements than it is to apply it to many unrelated elements.
+
++ **Accessibility**, screen readers read semantic elements for better communication.
+
+### Example Elements
+
+#### Headings
+
+There are 6 levels of headings in HTML. `h1` is the largest and `h6` is the smallest.
+
+#### Superscript and Subscripts
+
+Superscript is text that appears small and at the topmost part of a line, you might see it on a squared equation: Example<sup>Example</sup>
+
+Subscript is the same expect on the bottom: Example<sub>Example</sub>
+
+In HTML, the element for superscript is `<sup>` and the element for subscript is `<sub>`
+
+They can be used for dates, math equations, copyright labels, and chemical formulas among other things.
+
+#### Abbreviation
+
+In HTML, the element `<abbr>` is used for abbreviations and acronyms. When first used for a term, a full text expansion of the term should be added in plain text after the element. Or, if the situation doesn't call for it, the full text expansion can instead be added in an unseen `title` attribute.
+
+## CSS
+
+### Application
+
+There are 3 ways to apply CSS to an HTML file:
+
+1. **External Stylesheet**. An external stylesheet can be referenced in the head of the HTML file for use. This is the best practice, as separating code by language is the cleanest, most efficient way to do things.
+
+2. **Internal Stylesheet**. An internal stylesheet can be used to superimpose unique CSS code onto individual web pages.
+
+3. **Inline Styling**. Don't do this. It makes the code more difficult to read, is less efficient when it comes to maintenence, and overall makes things more jumbled.
+
+### Example CSS
+
+`h2 {
+    color: black;
+    padding: 5px;
+}`
+
+The **selector** is `h2`, it is the target HTML element.
+
+The **declarations** are `color: black;` and `padding: 5px;`. They specify the visual changes CSS is adding to the HTML.
+
+The **properties** are `color` and `padding`, the specify what, exactly, is being changed.
+
+## JavaScript
+
+### Strings
+
+Strings are written text enclosed in quotation marks. For example, ``This is a string``, `"this is also a string"`
+
+### Operators
+
+Operators assign, compare, or create an interaction between multiple variables. Common operators are `+`, `=`, `==`, and `*`
+
+#### Comparison Operators
+
+Comparison operators are a type of operator used to compare multiple variables or equations and return and `true` or `false` output. Examples of comparison operators are `===`, `&&`, and `||`
+
+`&&` refers to an `AND` operator. If both sides of an `&&` operator returns a `true` value, the the ouput is `true`.
+
+`||` refers to an `OR` operator. If one side of an `||` operator returns a `true` value, then the output is `true`.
+
+### Functions
+
+Functions are a block of code which can be invoked multiple time via a name assigned to it.
+
+Functions are very useful and can be used to solve many problems, including managing and calculating the revenue of a small business.
+
+### If...Else statements
+
+An `if` statement checks a condition and if it evaluates to `true`, the the code block will execute.
+
+An `else` statement occurs when the `if` statement does not execute.
+
+An `else if` statement can be added to the `if...else` statement in order to create more potential outcomes.
