added class 3 notes

--- a/code-201/03.md
+++ b/code-201/03.md
@@ -1,1 +1,98 @@
-# Code 201, Class 3
+# HTML Lists, JS Control Flow, and the CSS Box Model
+
+## HTML Lists
+
+
+### Unordered Lists
+
+Syntax: `<ul></ul>`
+
+Unordered lists are used in scenarios where one wants to group a list of items and the order that they're in doesn't matter.
+
+To change the bullet style of an unordered list, use the css property `list-style-type`. There is an HTML attribut to do this as well, but it is out of date.
+
+### Ordered List
+
+syntax: `<ol></ol>`
+
+Ordered lists are used in scenarios where one one wants to list things in a particular order. This can be used for things like directions.
+
+The numbers on an ordered list can be changed with various attributes utilized for different purposes.
+
+`reversed` lists the numbers in reverse order.
+
+`start` specifies the starting number of the list, which should be used when the list doesn't start at one.
+
+`type` specifies the style of the numbers. For example, roman numerals, letters instead of numbers, uppercase or lowercase, etc.
+
+## CSS Box Model
+
+AS per the reading instructions for this page, I will explain `margin` and `padding` in the CSS box model as characters in a story.
+
+In a story called 'The Box Model', `margin` and `padding` serve similar roles. `margin` is the oldest sibling, wrapping everyone else in the box in their protective grip. They face the outside and stand between their box and other boxes. `padding` is the second oldest, and wraps around all the smaller elements in the box. They face the inside and provide an extra comfy layer of softness and protection to those inside.
+
+Anyways, the four parts of an HTML element box are:
+
++ margin
+
++ border
+
++ padding
+
++ content
+
+## JavaScript
+
+### Arrays
+
+Arrays are an object that stores a list of values of any data type. They can be contained in a variable.
+
+This is a valid Javascript array:
+
+`const people = [['pete', 32, 'librarian', null], ['Smith', 40, 'accountant', 'fishing:hiking:rock_climbing'], ['bill', null, 'artist', null]];`
+
+Lists in an array have assigned numbers to them based off of the order in which they are written, starting with a value of 0. This can be used to access an item within an array.
+
+In order to access an item in an array within an array, put brackets around the number you want to invoke.
+
+For example, to access `pete` in the array above, one could write `people[0]`.
+
+### Assignment Operators
+
+Examples:
+
+- `=`: The basic assignment operator. Does nothing but assign a value to something.
+
+- `+=`: Addition assignment operator. Adds the left value to the right value and assigns the result to the left value. Can be written as `x = x + y`
+
+- `*=`: Multiplication assignment operator. Multiplies the left value by the right value and assigns the result to the left value. Can be written as `x = x * y`
+
+- `&=`: AND assignment operator. Applies the `AND` between the left and right values and assigns the returned boolean to the left value. Can be written as `x = x & y`
+
+- `-=`: Subtraction assignment operator. Subtracts the left value by the right value and assigns the result to the left value. Can be written as `x = x - y`
+
+### Example Problem
+
+`let a = 10;
+ let b = 'dog';
+ let c = false;
+
+ (a + c) + b;`
+
+returns
+
+`"10dogfalse"`
+
+### Conditional Statements
+
+A real world example of a conditional statement's use is in password management. If the password is correct, then the user gets in, otherwise the user should not be let in.
+
+### Loops
+
+Loops are useful in JavaScript for many reasons. One way they're useful is if you want a task repeated a specified number of times, for instance, if you want a conditional to be executed five times before stopping. 
+
+## Things I want to know more about
+
+- I want to delve further into array management.
+
+- Boolean arithmatic
