added class 4 notes

--- a/code-201/04.md
+++ b/code-201/04.md
@@ -1,1 +1,63 @@
-# Code 201, Class 4
+# HTML Links, JS Functions, and CSS Layout
+
+## HTML Links
+
+Syntax:
+
+`<a href="link">Text</a>`
+
+The `a` element implants a link onto a specified set of text or element.
+
+The `href` contains the link itself.
+
+One way to make links accessible to all reader is to use the `title` attribute, which contains the equivalent to alt text within the `a` element. Turning an image into a link can also make the link accessible to different readers.
+
+## CSS Layout
+
+**Normal Flow** is the default way HTML elements are laid out in CSS. Readability in normal flow is important to consider.
+
+**Static Positioning** is the default for every HTML element.
+
+**Block-Level Elements** are HTML elements that fill in the entirety of a given amount of inline space.
+
+**In-line Elements** are HTML elements that are only as large as the content of the element itself. They are often nestled within block-level elements.
+
+**Absolute Positioning** is a useful positioning which places elements on a separate layer from the rest of the page. This can be used for pop-ups, menus, and more interactive UI feature.
+
+**Fixed Positioning** is similar to absolute positioning in that it sets the element on a different layer, except instead of being positioned relative to the ancestor element, it is positioned relative to the viewport aka what the user can see.
+
+## Functions
+
+A function is an object containing a block of code which can be invoked at any time.
+
+A function must first be declared before it is used. The function is assigned the code, but the code is not implemented until it is invoked.
+
+Invoking a function, or calling a function, is when it is actually called upon to execute the code assigned to it.
+
+**Parameters** are values entered into the paranthese of a function used to be implemented into the code. Not all functions have parameters, and some functions have optional parameters.
+
+An **argument** is the value a function returns after running through its code.
+
+## Pair Programming
+
+Pair programming is the practice of two programmers working on the same code at the same time. Typically only one person writes the code and the other person directs the writer.
+
+While paired programming takes longer, it also provides higher quality coding. It also benefits the coders, providing them with communication experience and allows them to talk through their ideas.
+
+## Things I want to know more about
+
+- CSS sticky elements.
+
+- ways one can use parameters in a function
+
+## References
+
+[Creating Hyperlinks](https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks)
+
+[CSS Normal Flow](https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Normal_Flow)
+
+[CSS Positioning](https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Positioning)
+
+[Functions](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Functions)
+
+[Pair Programming](https://www.codefellows.org/blog/6-reasons-for-pair-programming/)
