edited notes to 201/4

--- a/code-201/04.md
+++ b/code-201/04.md
@@ -34,9 +34,9 @@ A function must first be declared before it is used. The function is assigned th
 
 Invoking a function, or calling a function, is when it is actually called upon to execute the code assigned to it.
 
-**Parameters** are values entered into the paranthese of a function used to be implemented into the code. Not all functions have parameters, and some functions have optional parameters.
+**Parameters** are defined labels to values entered into the paranthese of a function used to be implemented into the code. Not all functions have parameters, and some functions have optional parameters.
 
-An **argument** is the value a function returns after running through its code.
+An **argument** is the actual input added into the paranthese of a function.
 
 ## Pair Programming
 
