added class 5 notes

--- a/code-201/05.md
+++ b/code-201/05.md
@@ -1,1 +1,51 @@
-# Code 201, Class 5
+# Images, Color, and Text
+
+## HTML Images
+
+An image can be inserted into an HTML file via the `img` tag. It has two attributes that must be filled out to be useful.
+
+`src` contains the URL containing the image.
+
+`alt` contains alt text.
+
+alt text is used for when the image cannot be displayed, among other purposes. search engines use it to search for keywords, screen readers use it to convey an image to visually impaired users, and in the event images are turned off or the user is using a text-only browser, alt text is used.
+
+`figure` is an element that links content in a `figcaption` element to content elsewhere. This can be used to provide a caption to an image.
+
+### Image Types
+
+Common image types used in webpages are .gif, .png, .jpeg, .apng, .avif, and .svg.
+
+svg stands for scalable vector graphics. It's a filetype for vector images, which means the wuality of the image won't change no matter how much you mess with the size.
+
+gif stands for graphics interchange format. It's used specifically for computers and is good for small and/or simple images and animations.
+
+## CSS
+
+### Color
+
+There are 2 properties in CSS that colors an HTML element; the `color` and `bavkground-color` properties.
+
+The `color` property colors the foreground of an HTML element, that is to say, the actual content itself.
+
+The `background-color` property colors the background of the element and fills in the block/square the element rests in.
+
+Color can be used to draw the eye and change the flow of content. It can add visual weight to certain areas and if used incorrectly, can render a website janky and unreadable.
+
+### Fonts
+
+When choosing fonts, it is important to consider not only aesthetics but accessibility. The fonts used should be widely available on user computers all over the world.
+
+There are specific fonts considered "web-safe". These are fonts that virtually every browser supports. Web safe fonts should be considered above all else.
+
+`font-family` is the property that assigns a font to text.
+
+`font-size` is the property that alters the size of the text in an element.
+
+`font-weight` is the property that alters the width of the vector lines of the text, or changes the boldness of it.
+
+`font-style` is the property that applies italics text.
+
+`letter-spacing` is the property that sets the space between letters.
+
+`word-spacing` is the property that sets the space between words.
