added notes for class 6

--- a/code-201/06.md
+++ b/code-201/06.md
@@ -1,1 +1,38 @@
-# Code 201, Class 6
+# Objects and the DOM
+
+## Objects
+
+Objects are containers of specific data. Similar to an array, they carry multiple datasets, but they differ in structure, recall, and functionality.
+
+### Syntax
+
+`const object = {
+    property: value,
+    property: value,
+    property: value,
+    property: method/function () {
+        code
+    }
+}`
+
+Objects can have an endless amount of properties.
+
+### Bracket Notation vs Dot Notation
+
+Object properties can be invoked in two different notation types, dot and bracket.
+
+**Dot:** `object.property`
+
+**Bracket:** `object["property"]`
+
+Dot notation is typically preferred but in some instances bracket notation is required, such as when an object's property is held in a variable.
+
+### This
+
+`this` is a keyword used to refer to an object within its own declaration. It's useful in instances when dealing with multiple objects.
+
+## The DOM
+
+Aka the Document Object Model.
+
+The DOM is the interface used for web pages. Javascript is a programming language that is often used to write out the DOM and invoke it. That is to say, the DOM can be written in Javascript, but Javascript is independent of the DOM.
