added class 8 notes

--- a/code-201/08.md
+++ b/code-201/08.md
@@ -1,1 +1,19 @@
-# Code 201, Class 8
+# CSS Flexbox
+
+Flexbox, or flexible layout model is a CSS layout model designed for one dimensional content. That is, it deals in either rows or columns but neither both, and without regard to subsequent rows or columns.
+
+## Main axis and Cross axis
+
+There are two axis flexbox deals with, row and column. Flex items only deal with one of these at a time. The one being dealt with is called the main axis.
+
+The `flex-direction` property sets the main axis. Flex  items are then moved as a group along that axis.
+
+The cross axis is the axis that runs perpendicular to the main axis. If the main axis is row, then the cross axis is column and vice versa.
+
+## Accessibility
+
+Certain properties of the flexbox model can negatively impact accessibility. Particularly in that flexbox can move items out of order from the DOM, this means screen readers and tab controls will likely not be able to follow in a perfectly linear fashion.
+
+## Advantages
+
+Flexbox has many advantages over its predecessors, such as `float`. It is able to achieve what the older CSS features either could not or had difficulty doing, such as making all items within a layout the same width or height regardless of content amount and equalizing the amount of space children take up.
