added class 9 notes

--- a/code-201/09.md
+++ b/code-201/09.md
@@ -1,1 +1,41 @@
-# Code 201, Class 9
+# Forms and JS Events
+
+## HTML Forms
+
+Forms are one of the biggest points of interaction between a user and a website/application. They're used for both data-input and UX purposes.
+
+That being said, a form can also easily frustrate a user. Longer forms are quite hated, so its important to make sure that a form contains only the necessary prompts and componenets.
+
+### Form Elements
+
++ `<form>` is the container element for a form. It contains multiple important attributes including `action`, the location of where the collected data should be sent, and `method`, the HTTP method of sending that data.
+
++ `<label>` gives a name to an input section of a form. It uses the attribute `for` in order to tie it to its sister input element.
+
++ `<input>` defines an area of data input. It uses the attributes `type`, which labels what type of input interface is being used, `name`, which labels it, and `value`, which fills the elenet with desired text.
+
++ `<textarea>` is used for when the desired data input is a block of text. It opens a text box.
+
++ `<button>` is exactly what it sounds like. It summons a button. It uses the attribut `tyoe` to define what the desired effect of clicking on it will do. `type` accepts three values, `submit`, which sends data to the defined location in the `action` attribute on the `<form>` tag, `reset`, which resets all form elements to their default state, and `button`, which does nothing on its own but can have a custom action defined in javascript.
+
+### Accessibility
+
+It is important to keep screen readers in mind when designing forms. The flow of a form can alter the words read aloud by a screen reader as well as their order. Listen to how a screen reader reads off a form before finalizing it in order to make the best interface.
+
+## Javascript Events
+
+Events are anything that happens in a programmed system.
+
+### Event Handlers
+
+An event handler is a means to react to an event. You can attach an event handler to almost any event that is fired.
+
+### Event Listener Function
+
+`.addEventListener()` is a function that can be added to a variable assigned to a method of input (example: a button). It requires two arguments, one is the event impetus as a string, such as a click or mouse hover, and the other is is a function that occurs when the event happens.
+
+### Event Object
+
+An event object is a parameter that helps add specificity to an event reaction.
+
+The `.target` property can be added to an event object in order to delineate that the effect of the event occurs to a specific HTML element.
