made class 10 notes

--- a/code-201/10.md
+++ b/code-201/10.md
@@ -1,1 +1,25 @@
-# Code 201, Class 10
+# Debugging
+
+## Types of Errors
+
+**Syntax errors** are spelling or other grammar type errors in your code. They usually elicit an error message and are easily fixable.
+
+**Logic errors** are errors within the logic of your code. It may work but not have the intended result and usually won't have an error message.
+
+## The JavaScript Debugger
+
+The JavaScript Debugger is a type of tool most internet browsers have. It's located in the Inspector window and is used to inspect javascript in real time as it's working.
+
+It shows breakpoints, scopes, and call stacks.
+
+**Breakpoints** are the points in code where it will stop executing. JavaScript debuggers allow you to place breakpoints at different places within the code.
+
+**Call stacks** are areas of computer memory used to store information about active code. Looking at your call stack can tell you things like the control flow of your code and if certain lines of code are running.
+
+## In Regards to Me
+
+I've already encountered a number of bugs in short time as a burgeoning software developer. I've also done my fair share of bugging with the help of TA's and the miracle of taking breaks away from coding before looking at it with fresh eyes.
+
+Most of the bugs I've encountered were syntax errors, but I've also encountered a handful of logic errors, the most recent one being when I was trying to create a function that summed up the totals of any amount of arrays of arrays.
+
+Having more knowledge of debugging will help me be able to better solve bugs on my own without outside help.
