added notes for class 11

--- a/code-201/11.md
+++ b/code-201/11.md
@@ -1,1 +1,49 @@
-# Code 201, Class 11
+# Audio, Video, CSS Grid Layout, and Images
+
+## Video and Audio
+
+Video and audio used to be supported on the internet by plugins (for example: flash). Those have since become obselete and video and audio can be embedded into HTML via the `video` and `audio` elements.
+
+### Attributes
+
++ `src` is the attribute containing the video/audio file. It can also be listed as the child element `source` to a `video` parent element.
+
++ `controls` is the attribute that allows a UI control display to show up on the video, allowing the uder to do things like pause the content or control the audio.
+
++ `autoplay` does exactly what it sounds like, makes the video automatically play once it loads. Users don't usually like this.
+
++ `loop` plays the video on a loop.
+
++ `muted` makes the video default to mute.
+
++ `poster` is used to link an image to be used as the video thumbnail before it plays.
+
++ `preload` is used for larger videos and determines whether or not a video should buffer.
+
+### Fallback Content
+
+Not all browders support the same type of video/audio files, as such it's important to provide multiple types of formats in the video/audio links. Multiple `src` attributes can be used to provide different video/audio files of different formats. Webm and MP4 are the most commonly accepted video formats.
+
+## CSS Grid Layout
+
+Like flex, grid layout is a newer CSS layout meant to solve the problems of previous layout types. However, unlike flex, grid is two dimensional instead of one dimensional, meaning instead of elements consisting only of rows or columns, elements can be placed based off of both.
+
+### Terminology
+
++ **Grid Container:** A parent element which the property `display: grid;` is applied to. Its children elements all take on the property as well.
+
++ **Grid Item:** The direct child elements of a grid container. Child elements of a child element are not considered grid items.
+
++ **Grid Line:** The unseen dividing lines that make up tthe grid aspect of a grid layout. They are either vertical or horizontal and outline grid columns and rows.
+
++ **Grid Cell:**The squares/rectangles in the grid formed by four intersecting grid lines, each square represents one unit.
+
+## Responsive Images
+
+Responsive image technologies was developed in response to multiple display issues popping up with the advent of different screen sizes. It increases the readability and accessibility of a site as well as makes it more visually appealing.
+
+It is used using two `img` attributes:
+
++ `srcset` allows you to provide multiple source images at multiple resolutions and crops.
+
++ `sizes` delineates which image shopuld be used for which screen size.
