added class 12 notes

--- a/code-201/12.md
+++ b/code-201/12.md
@@ -1,1 +1,35 @@
-# Code 201, Class 12
+# Canvas and Chart.js
+
+## Canvas
+
+`canvas` is a newer HTML5 tag that lets developers draw graphics via JavaScript.
+
+It requires a `width` and `height` attribute as well as a closing tag. The content between an opening tag and cloding tag is fallback content.
+
+### In JavaScript
+
+To render something in `canvas`, the `getContext()` method is used. It takes one argument, the type of context it's rendering, and allows the developer to then create a graphic.
+
+## Chart.js
+
+Chart.js is currently GitHub's most popular chart library for JavaScript. It provides a number of chart types and sets and utilizes the `canvas` element.
+
+Chat.js can be installed with npm and then referenced via the `script` tag in you HTML file.
+
+### Types of Charts
+
+Chart.js has many types of charts, including:
+
++ Bar Chart
++ Area Chart
++ Bubble Chart
++ Doughnut and Pie Charts
++ Line Chart
++ Mixed Charts
++ Polar Area Charts
++ Radar Chart
++ Scatter Chart
+
+### Chart Benefits
+
+Charts are more visually appealing than tables and communicate data much easier. They have the benefit of increasing a site's readability and condensing a large amount of information into a smaller, more accessible visual.
