added class 13 notes

--- a/code-201/13.md
+++ b/code-201/13.md
@@ -1,1 +1,13 @@
-# Code 201, Class 13
+# Local Storage
+
+Local storage is data from a web application that is saved locally on a user's computer.
+
+Local storage can be used to save user preferences or other user relevant information without needing the user to sign in or create an account with your web application for the data to be saved on the server.
+
+**Personal information should not be stored**
+
+## Implementation
+
+Local storage can be used in JavaScript easily. All you have to do is modify the `localStorage` object. This is usually done using the `setItem()` and `getItem()` methods.
+
+One issue with setting local storage is that it can only store strings. This can be worked around by using the `JSON.stringify()` and `JSON.parse()` methods.
