added code 301 pages and updated class 2 notes

--- a/code-201/14.md
+++ b/code-201/14.md
@@ -1,1 +1,9 @@
-# Code 201, Class 14
+# CSS Transformations and Animations
+
+## CSS Transform Property
+
+The CSS3 transform property acts in a similar way to the transform tool used in art and drawing programs. It operates both in a two-dimensional and three-dimensional capacity, utilizing the x and y axis for 2D transformations and the z axis for 3D transformations.
+
+Some of the things it can do is **rotate**, **scale**, and **skew**. It can also work with perspective and depth on a 3D basis.
+
+## CSS Transitions and Animations
