added class 12 notes

--- a/code-301/10.md
+++ b/code-301/10.md
@@ -21,4 +21,4 @@ A breakpoint is a placed point in code that forces the code to stop running at a
 
 The `debugger` statement allows you to view a code's run history before stopping. It acts similar to the history tool in lots of digital art programs.
 
-*ChatGPT was consuled in this article*
+*ChatGPT was consulted in this article*
